// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`applyLinks  1`] = `
[
  <span>
    No. Vaccines are
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      not associated with the development of autism or autism spectrum disorder
    </span>
  </span>,
  <span>
    . Multiple studies have found no relationship between vaccination and autism or ASD.
  </span>,
]
`;

exports[`applyLinks  2`] = `
[
  <span>
    Dreams are a remarkable experiment in psychology and neuroscience, revealing that the human brain can generate entire conscious experiences by itself, disconnected from the environment. Content analysis and developmental studies promote understanding of dream phenomenology. Brain lesion studies, functional imaging, and neurophysiology have advanced knowledge of the neural basis of dreaming.
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      Dreaming and the brain: from phenomenology to neurophysiology
    </span>
  </span>,
  <span>
     The brain as a dream state generator: an activation-synthesis hypothesis of the dream process,
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      The brain as a dream state generator: an activation-synthesis hypothesis of the dream process
    </span>
  </span>,
  <span>

  </span>,
]
`;

exports[`applyLinks 1`] = `
[
  <span>
    No. Vaccines are
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      not associated with the development of autism or autism spectrum disorder
    </span>
  </span>,
  <span>
    . Multiple studies have found no relationship between vaccination and autism or ASD.
  </span>,
]
`;

exports[`applyLinks 2`] = `
[
  <span>
    Dreams are a remarkable experiment in psychology and neuroscience, revealing that the human brain can generate entire conscious experiences by itself, disconnected from the environment. Content analysis and developmental studies promote understanding of dream phenomenology. Brain lesion studies, functional imaging, and neurophysiology have advanced knowledge of the neural basis of dreaming.
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      Dreaming and the brain: from phenomenology to neurophysiology
    </span>
  </span>,
  <span>
     The brain as a dream state generator: an activation-synthesis hypothesis of the dream process,
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      The brain as a dream state generator: an activation-synthesis hypothesis of the dream process
    </span>
  </span>,
  <span>

  </span>,
]
`;

exports[`applyLinks can 1`] = `
[
  <span>
    No. Vaccines are
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      not associated with the development of autism or autism spectrum disorder
    </span>
  </span>,
  <span>
    . Multiple studies have found no relationship between vaccination and autism or ASD.
  </span>,
]
`;

exports[`applyLinks can 2`] = `
[
  <span>
    Dreams are a remarkable experiment in psychology and neuroscience, revealing that the human brain can generate entire conscious experiences by itself, disconnected from the environment. Content analysis and developmental studies promote understanding of dream phenomenology. Brain lesion studies, functional imaging, and neurophysiology have advanced knowledge of the neural basis of dreaming.
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      Dreaming and the brain: from phenomenology to neurophysiology
    </span>
  </span>,
  <span>
     The brain as a dream state generator: an activation-synthesis hypothesis of the dream process,
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      The brain as a dream state generator: an activation-synthesis hypothesis of the dream process
    </span>
  </span>,
  <span>

  </span>,
]
`;

exports[`applyLinks can han 1`] = `
[
  <span>
    No. Vaccines are
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      not associated with the development of autism or autism spectrum disorder
    </span>
  </span>,
  <span>
    . Multiple studies have found no relationship between vaccination and autism or ASD.
  </span>,
]
`;

exports[`applyLinks can han 2`] = `
[
  <span>
    Dreams are a remarkable experiment in psychology and neuroscience, revealing that the human brain can generate entire conscious experiences by itself, disconnected from the environment. Content analysis and developmental studies promote understanding of dream phenomenology. Brain lesion studies, functional imaging, and neurophysiology have advanced knowledge of the neural basis of dreaming.
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      Dreaming and the brain: from phenomenology to neurophysiology
    </span>
  </span>,
  <span>
     The brain as a dream state generator: an activation-synthesis hypothesis of the dream process,
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      The brain as a dream state generator: an activation-synthesis hypothesis of the dream process
    </span>
  </span>,
  <span>

  </span>,
]
`;

exports[`applyLinks can handle  1`] = `
[
  <span>
    No. Vaccines are
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      not associated with the development of autism or autism spectrum disorder
    </span>
  </span>,
  <span>
    . Multiple studies have found no relationship between vaccination and autism or ASD.
  </span>,
]
`;

exports[`applyLinks can handle  2`] = `
[
  <span>
    Dreams are a remarkable experiment in psychology and neuroscience, revealing that the human brain can generate entire conscious experiences by itself, disconnected from the environment. Content analysis and developmental studies promote understanding of dream phenomenology. Brain lesion studies, functional imaging, and neurophysiology have advanced knowledge of the neural basis of dreaming.
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      Dreaming and the brain: from phenomenology to neurophysiology
    </span>
  </span>,
  <span>
     The brain as a dream state generator: an activation-synthesis hypothesis of the dream process,
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      The brain as a dream state generator: an activation-synthesis hypothesis of the dream process
    </span>
  </span>,
  <span>

  </span>,
]
`;

exports[`applyLinks can handle m 1`] = `
[
  <span>
    No. Vaccines are
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      not associated with the development of autism or autism spectrum disorder
    </span>
  </span>,
  <span>
    . Multiple studies have found no relationship between vaccination and autism or ASD.
  </span>,
]
`;

exports[`applyLinks can handle m 2`] = `
[
  <span>
    Dreams are a remarkable experiment in psychology and neuroscience, revealing that the human brain can generate entire conscious experiences by itself, disconnected from the environment. Content analysis and developmental studies promote understanding of dream phenomenology. Brain lesion studies, functional imaging, and neurophysiology have advanced knowledge of the neural basis of dreaming.
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      Dreaming and the brain: from phenomenology to neurophysiology
    </span>
  </span>,
  <span>
     The brain as a dream state generator: an activation-synthesis hypothesis of the dream process,
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      The brain as a dream state generator: an activation-synthesis hypothesis of the dream process
    </span>
  </span>,
  <span>

  </span>,
]
`;

exports[`applyLinks can handle markd 1`] = `
[
  <span>
    No. Vaccines are
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      not associated with the development of autism or autism spectrum disorder
    </span>
  </span>,
  <span>
    . Multiple studies have found no relationship between vaccination and autism or ASD.
  </span>,
]
`;

exports[`applyLinks can handle markd 2`] = `
[
  <span>
    Dreams are a remarkable experiment in psychology and neuroscience, revealing that the human brain can generate entire conscious experiences by itself, disconnected from the environment. Content analysis and developmental studies promote understanding of dream phenomenology. Brain lesion studies, functional imaging, and neurophysiology have advanced knowledge of the neural basis of dreaming.
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      Dreaming and the brain: from phenomenology to neurophysiology
    </span>
  </span>,
  <span>
     The brain as a dream state generator: an activation-synthesis hypothesis of the dream process,
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      The brain as a dream state generator: an activation-synthesis hypothesis of the dream process
    </span>
  </span>,
  <span>

  </span>,
]
`;

exports[`applyLinks can handle markdow 1`] = `
[
  <span>
    No. Vaccines are
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      not associated with the development of autism or autism spectrum disorder
    </span>
  </span>,
  <span>
    . Multiple studies have found no relationship between vaccination and autism or ASD.
  </span>,
]
`;

exports[`applyLinks can handle markdow 2`] = `
[
  <span>
    Dreams are a remarkable experiment in psychology and neuroscience, revealing that the human brain can generate entire conscious experiences by itself, disconnected from the environment. Content analysis and developmental studies promote understanding of dream phenomenology. Brain lesion studies, functional imaging, and neurophysiology have advanced knowledge of the neural basis of dreaming.
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      Dreaming and the brain: from phenomenology to neurophysiology
    </span>
  </span>,
  <span>
     The brain as a dream state generator: an activation-synthesis hypothesis of the dream process,
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      The brain as a dream state generator: an activation-synthesis hypothesis of the dream process
    </span>
  </span>,
  <span>

  </span>,
]
`;

exports[`applyLinks can handle markdown  1`] = `
[
  <span>
    No. Vaccines are
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      not associated with the development of autism or autism spectrum disorder
    </span>
  </span>,
  <span>
    . Multiple studies have found no relationship between vaccination and autism or ASD.
  </span>,
]
`;

exports[`applyLinks can handle markdown  2`] = `
[
  <span>
    Dreams are a remarkable experiment in psychology and neuroscience, revealing that the human brain can generate entire conscious experiences by itself, disconnected from the environment. Content analysis and developmental studies promote understanding of dream phenomenology. Brain lesion studies, functional imaging, and neurophysiology have advanced knowledge of the neural basis of dreaming.
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      Dreaming and the brain: from phenomenology to neurophysiology
    </span>
  </span>,
  <span>
     The brain as a dream state generator: an activation-synthesis hypothesis of the dream process,
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      The brain as a dream state generator: an activation-synthesis hypothesis of the dream process
    </span>
  </span>,
  <span>

  </span>,
]
`;

exports[`applyLinks can handle markdown +  1`] = `
[
  <span>
    No. Vaccines are
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      not associated with the development of autism or autism spectrum disorder
    </span>
  </span>,
  <span>
    . Multiple studies have found no relationship between vaccination and autism or ASD.
  </span>,
]
`;

exports[`applyLinks can handle markdown +  2`] = `
[
  <span>
    Dreams are a remarkable experiment in psychology and neuroscience, revealing that the human brain can generate entire conscious experiences by itself, disconnected from the environment. Content analysis and developmental studies promote understanding of dream phenomenology. Brain lesion studies, functional imaging, and neurophysiology have advanced knowledge of the neural basis of dreaming.
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      Dreaming and the brain: from phenomenology to neurophysiology
    </span>
  </span>,
  <span>
     The brain as a dream state generator: an activation-synthesis hypothesis of the dream process,
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      The brain as a dream state generator: an activation-synthesis hypothesis of the dream process
    </span>
  </span>,
  <span>

  </span>,
]
`;

exports[`applyLinks can handle markdown + a  1`] = `
[
  <span>
    No. Vaccines are
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      not associated with the development of autism or autism spectrum disorder
    </span>
  </span>,
  <span>
    . Multiple studies have found no relationship between vaccination and autism or ASD.
  </span>,
]
`;

exports[`applyLinks can handle markdown + a  2`] = `
[
  <span>
    Dreams are a remarkable experiment in psychology and neuroscience, revealing that the human brain can generate entire conscious experiences by itself, disconnected from the environment. Content analysis and developmental studies promote understanding of dream phenomenology. Brain lesion studies, functional imaging, and neurophysiology have advanced knowledge of the neural basis of dreaming.
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      Dreaming and the brain: from phenomenology to neurophysiology
    </span>
  </span>,
  <span>
     The brain as a dream state generator: an activation-synthesis hypothesis of the dream process,
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      The brain as a dream state generator: an activation-synthesis hypothesis of the dream process
    </span>
  </span>,
  <span>

  </span>,
]
`;

exports[`applyLinks can handle markdown + a 1`] = `
[
  <span>
    No. Vaccines are
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      not associated with the development of autism or autism spectrum disorder
    </span>
  </span>,
  <span>
    . Multiple studies have found no relationship between vaccination and autism or ASD.
  </span>,
]
`;

exports[`applyLinks can handle markdown + a 2`] = `
[
  <span>
    Dreams are a remarkable experiment in psychology and neuroscience, revealing that the human brain can generate entire conscious experiences by itself, disconnected from the environment. Content analysis and developmental studies promote understanding of dream phenomenology. Brain lesion studies, functional imaging, and neurophysiology have advanced knowledge of the neural basis of dreaming.
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      Dreaming and the brain: from phenomenology to neurophysiology
    </span>
  </span>,
  <span>
     The brain as a dream state generator: an activation-synthesis hypothesis of the dream process,
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      The brain as a dream state generator: an activation-synthesis hypothesis of the dream process
    </span>
  </span>,
  <span>

  </span>,
]
`;

exports[`applyLinks can handle markdown + a ta 1`] = `
[
  <span>
    No. Vaccines are
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      not associated with the development of autism or autism spectrum disorder
    </span>
  </span>,
  <span>
    . Multiple studies have found no relationship between vaccination and autism or ASD.
  </span>,
]
`;

exports[`applyLinks can handle markdown + a ta 2`] = `
[
  <span>
    Dreams are a remarkable experiment in psychology and neuroscience, revealing that the human brain can generate entire conscious experiences by itself, disconnected from the environment. Content analysis and developmental studies promote understanding of dream phenomenology. Brain lesion studies, functional imaging, and neurophysiology have advanced knowledge of the neural basis of dreaming.
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      Dreaming and the brain: from phenomenology to neurophysiology
    </span>
  </span>,
  <span>
     The brain as a dream state generator: an activation-synthesis hypothesis of the dream process,
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      The brain as a dream state generator: an activation-synthesis hypothesis of the dream process
    </span>
  </span>,
  <span>

  </span>,
]
`;

exports[`applyLinks can handle markdown + a tag  1`] = `
[
  <span>
    No. Vaccines are
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      not associated with the development of autism or autism spectrum disorder
    </span>
  </span>,
  <span>
    . Multiple studies have found no relationship between vaccination and autism or ASD.
  </span>,
]
`;

exports[`applyLinks can handle markdown + a tag  2`] = `
[
  <span>
    Dreams are a remarkable experiment in psychology and neuroscience, revealing that the human brain can generate entire conscious experiences by itself, disconnected from the environment. Content analysis and developmental studies promote understanding of dream phenomenology. Brain lesion studies, functional imaging, and neurophysiology have advanced knowledge of the neural basis of dreaming.
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      Dreaming and the brain: from phenomenology to neurophysiology
    </span>
  </span>,
  <span>
     The brain as a dream state generator: an activation-synthesis hypothesis of the dream process,
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      The brain as a dream state generator: an activation-synthesis hypothesis of the dream process
    </span>
  </span>,
  <span>

  </span>,
]
`;

exports[`applyLinks can handle markdown + a tag l 1`] = `
[
  <span>
    No. Vaccines are
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      not associated with the development of autism or autism spectrum disorder
    </span>
  </span>,
  <span>
    . Multiple studies have found no relationship between vaccination and autism or ASD.
  </span>,
]
`;

exports[`applyLinks can handle markdown + a tag l 2`] = `
[
  <span>
    Dreams are a remarkable experiment in psychology and neuroscience, revealing that the human brain can generate entire conscious experiences by itself, disconnected from the environment. Content analysis and developmental studies promote understanding of dream phenomenology. Brain lesion studies, functional imaging, and neurophysiology have advanced knowledge of the neural basis of dreaming.
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      Dreaming and the brain: from phenomenology to neurophysiology
    </span>
  </span>,
  <span>
     The brain as a dream state generator: an activation-synthesis hypothesis of the dream process,
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      The brain as a dream state generator: an activation-synthesis hypothesis of the dream process
    </span>
  </span>,
  <span>

  </span>,
]
`;

exports[`applyLinks can handle markdown + a tag lin 1`] = `
[
  <span>
    No. Vaccines are
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      not associated with the development of autism or autism spectrum disorder
    </span>
  </span>,
  <span>
    . Multiple studies have found no relationship between vaccination and autism or ASD.
  </span>,
]
`;

exports[`applyLinks can handle markdown + a tag lin 2`] = `
[
  <span>
    Dreams are a remarkable experiment in psychology and neuroscience, revealing that the human brain can generate entire conscious experiences by itself, disconnected from the environment. Content analysis and developmental studies promote understanding of dream phenomenology. Brain lesion studies, functional imaging, and neurophysiology have advanced knowledge of the neural basis of dreaming.
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      Dreaming and the brain: from phenomenology to neurophysiology
    </span>
  </span>,
  <span>
     The brain as a dream state generator: an activation-synthesis hypothesis of the dream process,
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      The brain as a dream state generator: an activation-synthesis hypothesis of the dream process
    </span>
  </span>,
  <span>

  </span>,
]
`;

exports[`applyLinks can handle markdown + a tag links 1`] = `
[
  <span>
    No. Vaccines are
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      not associated with the development of autism or autism spectrum disorder
    </span>
  </span>,
  <span>
    . Multiple studies have found no relationship between vaccination and autism or ASD.
  </span>,
]
`;

exports[`applyLinks can handle markdown + a tag links 2`] = `
[
  <span>
    Dreams are a remarkable experiment in psychology and neuroscience, revealing that the human brain can generate entire conscious experiences by itself, disconnected from the environment. Content analysis and developmental studies promote understanding of dream phenomenology. Brain lesion studies, functional imaging, and neurophysiology have advanced knowledge of the neural basis of dreaming.
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      Dreaming and the brain: from phenomenology to neurophysiology
    </span>
  </span>,
  <span>
     The brain as a dream state generator: an activation-synthesis hypothesis of the dream process,
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      The brain as a dream state generator: an activation-synthesis hypothesis of the dream process
    </span>
  </span>,
  <span>

  </span>,
]
`;

exports[`applyLinks can handle markdown 1`] = `
[
  <span>
    No. Vaccines are
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      not associated with the development of autism or autism spectrum disorder
    </span>
  </span>,
  <span>
    . Multiple studies have found no relationship between vaccination and autism or ASD.
  </span>,
]
`;

exports[`applyLinks can handle markdown 2`] = `
[
  <span>
    Dreams are a remarkable experiment in psychology and neuroscience, revealing that the human brain can generate entire conscious experiences by itself, disconnected from the environment. Content analysis and developmental studies promote understanding of dream phenomenology. Brain lesion studies, functional imaging, and neurophysiology have advanced knowledge of the neural basis of dreaming.
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      Dreaming and the brain: from phenomenology to neurophysiology
    </span>
  </span>,
  <span>
     The brain as a dream state generator: an activation-synthesis hypothesis of the dream process,
  </span>,
  <span>
    <span
      className="font-normal font-sans text-green-500 cursor-pointer"
      onClick={[Function]}
    >
      The brain as a dream state generator: an activation-synthesis hypothesis of the dream process
    </span>
  </span>,
  <span>

  </span>,
]
`;
